@@ -34,11 +34,18 @@ public class TestJdbWithCustomAuthWithKerberos {
   private static final Logger LOG = LoggerFactory.getLogger(TestSSL.class);
   private static Integer KERBEROS_CUSTOM_PORT;
   private static final String HS2_BINARY_MODE = "binary";
+  private static final String KEY_STORE_NAME = "keystore.jks";
+  private static final String TRUST_STORE_NAME = "truststore.jks";
+  private static final String KEY_STORE_PASSWORD = "HiveJdbc";
+  private static final String JAVA_TRUST_STORE_PROP = "javax.net.ssl.trustStore";
+  private static final String JAVA_TRUST_STORE_PASS_PROP = "javax.net.ssl.trustStorePassword";
 
   private MiniHiveKdc miniHiveKdc;
-  private MiniHS2 miniHS2 = null;
+  private static MiniHS2 miniHS2 = null;
+  private static Connection hs2Conn = null;
   private static HiveConf hiveConf = new HiveConf();
   private Map<String, String> confOverlay;
+  private String dataFileDir = hiveConf.get("test.data.files");
 
   @BeforeClass
   public static void beforeTest() throws Exception {
@@ -53,26 +60,22 @@ public class TestJdbWithCustomAuthWithKerberos {
 
   @After
   public void tearDown() throws Exception {
+    if (hs2Conn != null) {
+      hs2Conn.close();
+      hs2Conn = null;
+    }
+
     if (miniHS2 != null && miniHS2.isStarted()) {
       miniHS2.stop();
     }
+    System.clearProperty(JAVA_TRUST_STORE_PROP);
+    System.clearProperty(JAVA_TRUST_STORE_PASS_PROP);
   }
 
-  @Test
-  public void testKerberosAuthentication() throws Exception {
-    Connection hs2Conn = null;
-    setCustomAuthWithKrbOverlay();
-    startMiniHS2();
-
-    // JDBC connection to HiveServer2 with Kerberos
-    hs2Conn = DriverManager.getConnection(miniHS2.getJdbcURL());
-    hs2Conn.close();
-  }
 
   @Test
   public void testCustomAuthenticationOverPlainWithKerberos() throws Exception {
-    Connection hs2Conn = null;
-    setCustomAuthWithKrbOverlay();
+    setCustomAuthWithKrbOverlay(false);
     startMiniHS2();
 
     // JDBC connection with ID/PASSWD without SSL with Kerberos
@@ -88,11 +91,38 @@ public class TestJdbWithCustomAuthWithKerberos {
 
     // success ID/PASSWD
     hs2Conn = DriverManager.getConnection(url, "hiveuser", "hive");
-    hs2Conn.close();
-
-    System.out.println(">>> PASSED testCustomAuthenticationOverPlain");
   }
 
+  @Test
+  public void testKerberosAuthentication() throws Exception {
+    setCustomAuthWithKrbOverlay(false);
+    startMiniHS2();
+
+    // JDBC connection to HiveServer2 with Kerberos
+    hs2Conn = DriverManager.getConnection(miniHS2.getJdbcURL());
+  }
+
+  @Test
+  public void testCustomAuthenticationOverSSLWithKerberos() throws Exception {
+    setCustomAuthWithKrbOverlay(true);
+    startMiniHS2();
+
+    // JDBC connection with ID/PASSWD over SSL with Kerberos (Custom class)
+    String url = "jdbc:hive2://" + miniHS2.getHost() + ":" + KERBEROS_CUSTOM_PORT + "/default"
+      + ";ssl=true;sslTrustStore=" + dataFileDir + File.separator + TRUST_STORE_NAME
+      + ";trustStorePassword=" + KEY_STORE_PASSWORD;
+
+    // wrong ID/PASSWD
+    try {
+      hs2Conn = DriverManager.getConnection(url, "wronguser", "pwd");
+    } catch(SQLException e) {
+      assertNotNull(e.getMessage());
+      assertTrue(e.getMessage(), e.getMessage().contains("Peer indicated failure: Error validating the login"));
+    }
+
+    // success ID/PASSWD
+    hs2Conn = DriverManager.getConnection(url, "hiveuser", "hive");
+  }
 
   public static class SimpleCustomAuthWithKerberosProviderImpl implements KrbCustomAuthenticationProvider {
 
@@ -118,7 +148,7 @@ public class TestJdbWithCustomAuthWithKerberos {
   }
 
 
-  private void setCustomAuthWithKrbOverlay() {
+  private void setCustomAuthWithKrbOverlay(boolean ssl_used) {
     confOverlay = new HashMap<String, String>();
     confOverlay.put(ConfVars.HIVE_SERVER2_KERBEROS_CUSTOM_AUTH_USED.varname, "true");
     confOverlay.put(ConfVars.HIVE_SERVER2_KERBEROS_CUSTOM_AUTH_CLASS.varname,
@@ -128,6 +158,16 @@ public class TestJdbWithCustomAuthWithKerberos {
       "3");
     confOverlay.put(ConfVars.HIVE_SERVER2_KERBEROS_CUSTOM_AUTH_MAX_WORKER_THREADS.varname,
       "5");
+    if (ssl_used) {
+      // Custom class over SSL with Kerberos
+      confOverlay.put(ConfVars.HIVE_SERVER2_KERBEROS_CUSTOM_AUTH_SSL_USED.varname, "true");
+      confOverlay.put(ConfVars.HIVE_SERVER2_KERBEROS_CUSTOM_AUTH_SSL_KEYSTORE_PATH.varname,
+        dataFileDir + File.separator +  KEY_STORE_NAME);
+      confOverlay.put(ConfVars.HIVE_SERVER2_KERBEROS_CUSTOM_AUTH_SSL_KEYSTORE_PASSWORD.varname,
+        KEY_STORE_PASSWORD);
+    } else {
+      confOverlay.put(ConfVars.HIVE_SERVER2_KERBEROS_CUSTOM_AUTH_SSL_USED.varname, "false");
+    }
   }
 
   private void startMiniHS2() {
